--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body class="body">
+  <body>
     <!--header page-->
     <header class="page-header">
       <div class="container container-header">
