--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <!--Header-->
     <header class="page-header">
       <div class="container container-header">
-        <a href="./index.html" class="logo"><span class="logo__link">Web</span>Studio</a>
+        <a href="./index.html" class="logo"><span class="logo__web">Web</span>Studio</a>
         <nav>
           <ul class="site-nav list">
             <li class="site-nav__item">
-              <a href="./index.html" class="site-nav__link decor current">Студия</a>
+              <a href="./index.html" class="site-nav__link site-nav__link--current decor">Студия</a>
             </li>
             <li class="site-nav__item">
               <a href="./portfolio.html" class="site-nav__link decor">Портфолио</a>
@@ -35,17 +35,17 @@
           </ul>
         </nav>
         <ul class="auth-nav list">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="auth-nav-link">
-              <svg class="icon-envelope">
+          <li class="auth-nav__item">
+            <a href="mailto:info@devstudio.com" class="auth-nav__link">
+              <svg class="auth-nav__icon--envelope">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="item auth">
-            <a href="tel:+380961111111" class="auth-nav-link">
-              <svg class="icon-smartphone">
+          <li class="auth-nav__item auth">
+            <a href="tel:+380961111111" class="auth-nav__link">
+              <svg class="auth-nav__icon--smartphone">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -60,11 +60,11 @@
       <!--Hero-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">
+          <h1 class="hero__title">
             ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />
             ДЛЯ ВАШЕГО БИЗНЕСА
           </h1>
-          <button type="button" class="button" data-modal-open>Заказать услугу</button>
+          <button class="hero__button" type="button" data-modal-open>Заказать услугу</button>
         </div>
 
       </section>
