--- a/index.html
+++ b/index.html
@@ -69,34 +69,34 @@
 
       </section>
 
-      <!--Pluses of work-->
-      <section class="section">
+      <!--Our features-->
+      <section class="section section-features">
         <div class="container">
-          <h2 class="section-title visually-hidden">Плюсы работы</h2>
-          <ul class="features list">
+          <h2 class="section-features__title visually-hidden">Плюсы работы</h2>
+          <ul class="features-list list">
             <div>
-              <li class="item">
-                <div class="features-icons">
-                  <svg class="features-icon" style="width: 70px; height: 70px">
+              <li class="features-list__item">
+                <div class="features-icons-cont">
+                  <svg class="features-icons-cont__icon" style="width: 70px; height: 70px">
                     <use href="./images/icons.svg#antenna"></use>
                   </svg>
                 </div>
-                <h3 class="features-title">Внимание к деталям</h3>
-                <p class="features-title-text">
+                <h3 class="features-list__title">Внимание к деталям</h3>
+                <p class="features-list__text">
                   Идейные соображения, а также начало повседневной работы по формированию позиции.
                 </p>
               </li>
             </div>
 
             <div>
-              <li class="item">
-                <div class="features-icons">
-                  <svg class="features-icon" style="width: 70px; height: 70px">
+              <li class="features-list__item">
+                <div class="features-icons-cont">
+                  <svg class="features-icons-cont__icon" style="width: 70px; height: 70px">
                     <use href="./images/icons.svg#clock"></use>
                   </svg>
                 </div>
-                <h3 class="features-title">Пунктуальность</h3>
-                <p class="features-title-text">
+                <h3 class="features-list__title">Пунктуальность</h3>
+                <p class="features-list__text">
                   Задача организации, в особенности же рамки и место обучения кадров влечет за
                   собой.
                 </p>
@@ -104,14 +104,14 @@
             </div>
 
             <div>
-              <li class="item">
-                <div class="features-icons">
-                  <svg class="features-icon" style="width: 70px; height: 70px">
+              <li class="features-list__item">
+                <div class="features-icons-cont">
+                  <svg class="features-icons-cont__icon" style="width: 70px; height: 70px">
                     <use href="./images/icons.svg#diagram"></use>
                   </svg>
                 </div>
-                <h3 class="features-title">Планирование</h3>
-                <p class="features-title-text">
+                <h3 class="features-list__title">Планирование</h3>
+                <p class="features-list__text">
                   Равным образом консультация с широким активом в значительной степени
                   обуславливает.
                 </p>
@@ -119,14 +119,14 @@
             </div>
 
             <div>
-              <li class="item">
-                <div class="features-icons">
-                  <svg class="features-icon" style="width: 70px; height: 70px">
+              <li class="features-list__item">
+                <div class="features-icons-cont">
+                  <svg class="features-icons-cont__icon" style="width: 70px; height: 70px">
                     <use href="./images/icons.svg#astronaut"></use>
                   </svg>
                 </div>
-                <h3 class="features-title">Современные технологии</h3>
-                <p class="features-title-text">
+                <h3 class="features-list__title">Современные технологии</h3>
+                <p class="features-list__text">
                   Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                 </p>
               </li>
@@ -138,23 +138,23 @@
       <!--We doing-->
       <section class="section section-doing">
         <div class="container">
-          <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list list-doing">
-            <li class="item">
+          <h2 class="section-doing__title">Чем мы занимаемся</h2>
+          <ul class="doing-list list">
+            <li class="doing-list__item">
               <img src="./images/we-doing1.jpg" alt="Чем-мы-занимаемся1" width="370" />
-              <div class="element">
+              <div class="doing-list__element">
                 <p>Десктопные приложения</p>
               </div>
             </li>
-            <li class="item">
+            <li class="doing-list__item">
               <img src="./images/we-doing2.jpg" alt="Чем-мы-занимаемся2" width="370" />
-              <div class="element">
+              <div class="doing-list__element">
                 <p>Мобильные приложения</p>
               </div>
             </li>
-            <li class="item">
+            <li class="doing-list__item">
               <img src="./images/we-doing3.jpg" alt="Чем-мы-занимаемся3" width="370" />
-              <div class="element">
+              <div class="doing-list__element">
                 <p>Дизайнерские решения</p>
               </div>
             </li>
