--- a/index.html
+++ b/index.html
@@ -162,42 +162,42 @@
         </div>
       </section>
 
-      <!--Team-->
-      <section class="section team">
-        <div class="container container-team-main">
-          <h2 class="section-title">Наша команда</h2>
-          <ul class="list list-team">
-            <li class="item">
+      <!--Our team-->
+      <section class="section section-team">
+        <div class="container">
+          <h2 class="section-team__title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-list__item">
               <img src="./images/membe1.jpg" alt="Игорь Демьяненко" width="270" />
-              <div class="container container-team">
-                <h3 class="section-title-name">Игорь Демьяненко</h3>
-                <p class="section-title-profession">Product Designer</p>
+              <div class="container team-list__container">
+                <h3 class="team-list__name">Игорь Демьяненко</h3>
+                <p class="team-list__profession">Product Designer</p>
 
-                <ul class="list social">
-                  <li class="social-item">
-                    <a href="https://www.instagram.com" class="social-link">
-                      <svg class="social-icon">
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a href="https://www.instagram.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://twitter.com" class="social-link">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://twitter.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.facebook.com" class="social-link">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.facebook.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.linkedin.com" class="social-link">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.linkedin.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -205,36 +205,37 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-list__item">
               <img src="./images/membe2.jpg" alt="Ольга Репина" width="270" />
-              <div class="container container-team">
-                <h3 class="section-title-name">Ольга Репина</h3>
-                <p class="section-title-profession">Frontend Developer</p>
-                <ul class="list social">
-                  <li class="social-item">
-                    <a href="https://www.instagram.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+              <div class="container team-list__container">
+                <h3 class="team-list__name">Ольга Репина</h3>
+                <p class="team-list__profession">Frontend Developer</p>
+
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a href="https://www.instagram.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://twitter.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://twitter.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.facebook.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.facebook.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.linkedin.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.linkedin.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -242,36 +243,37 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-list__item">
               <img src="./images/membe3.jpg" alt="Николай Тарасов" width="270" />
-              <div class="container container-team">
-                <h3 class="section-title-name">Николай Тарасов</h3>
-                <p class="section-title-profession">Marketing</p>
-                <ul class="list social">
-                  <li class="social-item">
-                    <a href="https://www.instagram.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+              <div class="container team-list__container">
+                <h3 class="team-list__name">Николай Тарасов</h3>
+                <p class="team-list__profession">Marketing</p>
+
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a href="https://www.instagram.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://twitter.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://twitter.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.facebook.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.facebook.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.linkedin.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.linkedin.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -279,36 +281,37 @@
                 </ul>
               </div>
             </li>
-            <li class="item">
+            <li class="team-list__item">
               <img src="./images/membe4.jpg" alt="Михаил Ермаков" width="270" />
-              <div class="container container-team">
-                <h3 class="section-title-name">Михаил Ермаков</h3>
-                <p class="section-title-profession">UI Designer</p>
-                <ul class="list social">
-                  <li class="social-item">
-                    <a href="https://www.instagram.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+              <div class="container team-list__container">
+                <h3 class="team-list__name">Михаил Ермаков</h3>
+                <p class="team-list__profession">UI Designer</p>
+
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a href="https://www.instagram.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://twitter.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://twitter.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.facebook.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.facebook.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
-                    <a href="https://www.linkedin.com" class="social-link" target="_blank">
-                      <svg class="social-icon">
+                  <li class="social-list__item">
+                    <a href="https://www.linkedin.com" class="social-list__link">
+                      <svg class="social-list__icon">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -320,49 +323,49 @@
         </div>
       </section>
 
-      <!-- Regular customers -->
-     <section class="section">
+      <!-- Regular client -->
+     <section class="section client-section ">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="list client-list">
-            <li class="item client">
-              <a href="" class="button-client">
-                <svg class="client-icon">
+          <h2 class="client-section__title">Постоянные клиенты</h2>
+          <ul class="list client-section__list">
+            <li class="client">
+              <a href="" class="client__button">
+                <svg class="client__icon">
                   <use href="./images/icons.svg#Logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="item client">
-              <a href="" class="button-client">
-                <svg class="client-icon">
+            <li class="client">
+              <a href="" class="client__button">
+                <svg class="client__icon">
                   <use href="./images/icons.svg#Logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="item client">
-              <a href="" class="button-client">
-                <svg class="client-icon">
+            <li class="client">
+              <a href="" class="client__button">
+                <svg class="client__icon">
                   <use href="./images/icons.svg#Logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="item client">
-              <a href="" class="button-client">
-                <svg class="client-icon">
+            <li class="client">
+              <a href="" class="client__button">
+                <svg class="client__icon">
                   <use href="./images/icons.svg#Logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="item client">
-              <a href="" class="button-client">
-                <svg class="client-icon">
+            <li class="client">
+              <a href="" class="client__button">
+                <svg class="client__icon">
                   <use href="./images/icons.svg#Logo-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="item client">
-              <a href="" class="button-client">
-                <svg class="client-icon">
+            <li class="client">
+              <a href="" class="client__button">
+                <svg class="client__icon">
                   <use href="./images/icons.svg#Logo-6"></use>
                 </svg>
               </a>
@@ -374,48 +377,47 @@
 
     <!--Footer-->
     <footer class="footer">
-      <div class="container container-footer">
-        <div class="footer-logo-contact">
-          <a href="" class="logo foot"
-            ><span class="footer-logo-first">Web</span
-            ><span class="footer-logo-last">Studio</span></a
-          >
-          <address class="url">
-            <a href="https://goo.gl/maps/uPLYLn5CrwRYCuye6" class="footer-logo-address decor"
+      <div class="container footer-container">
+        <div class="footer__contact">
+          <a href="" class="footer-logo"
+            ><span class="footer-logo--white">Web</span
+            ><span class="footer-logo--blue">Studio</span></a>
+          <address>
+            <a href="https://goo.gl/maps/uPLYLn5CrwRYCuye6" class="footer__address decor"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
-            <a href="mailto:info@example.com" class="address-phone-mail decor">info@example.com</a>
-            <a href="tel:+380991111111" class="address-phone-mail decor">+38 099 111 11 11</a>
+            <a href="mailto:info@example.com" class="footer__mail decor">info@example.com</a>
+            <a href="tel:+380991111111" class="footer__phone decor">+38 099 111 11 11</a>
           </address>
         </div>
 
         <div class="footer-social">
-          <p class="footer-social-slogan">присоединяйтесь</p>
-          <ul class="list footer-social-list">
-            <li class="footer-social-item">
-              <a href="https://www.instagram.com" class="footer-social-link" target="_blank">
-                <svg class="footer-social-icon">
+          <p class="footer-social__slogan">присоединяйтесь</p>
+          <ul class="list footer-social__list">
+            <li class="footer-social__item">
+              <a href="https://www.instagram.com" class="footer-social__link" target="_blank">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="https://twitter.com" class="footer-social-link" target="_blank">
-                <svg class="footer-social-icon">
+            <li class="footer-social__item">
+              <a href="https://twitter.com" class="footer-social__link" target="_blank">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="https://www.facebook.com" class="footer-social-link" target="_blank">
-                <svg class="footer-social-icon">
+            <li class="footer-social__item">
+              <a href="https://www.facebook.com" class="footer-social__link" target="_blank">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="https://www.linkedin.com" class="footer-social-link" target="_blank">
-                <svg class="footer-social-icon">
+            <li class="footer-social__item">
+              <a href="https://www.linkedin.com" class="footer-social__link" target="_blank">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
@@ -426,15 +428,15 @@
         <!-- subscribe-form -->
 
         <form class="subscribe-form" autocomplete="off">
-          <p class="subscribe-slogan">Подпишитесь на рассылку</p>
-          <div class="subscribe-email">
-            <label class="form-label" for="email"></label>
-            <input class="form-inpit subscribe" type="email" name="email" id="email" placeholder="E-mail">
+          <p class="subscribe-form__slogan">Подпишитесь на рассылку</p>
+          <div>
+            <label for="email"></label>
+            <input class="subscribe-form__inpit" type="email" name="email" id="email" placeholder="E-mail">
           </div> 
         </form>
-         <div class="footer-button">
-          <button class="button subscribe" type="submit">Подписаться 
-              <svg class="subscribe-button-icon">
+         <div class="subscribe-form__button">
+          <button class="button subscribe-form__button--text" type="submit">Подписаться 
+              <svg class="subscribe-form__button--icon">
               <use href="./images/icons.svg#icon-send"></use>
               </svg>
           </button>
