--- a/index.html
+++ b/index.html
@@ -457,21 +457,21 @@
               <p class="form__title">Оставьте свои данные, мы вам перезвоним</p>
               <div class="contact-form">
                 <label class="contact-form__label" for="name">Имя</label>
-                <input class="contact-form__input" type="text" name="user-name" id="name">
+                <input class="contact-form__input contact-form__input--height" type="text" name="user-name" id="name">
                 <svg class="contact-form__icon">
                   <use href="./images/icons.svg#person-black"></use>
                 </svg>
               </div> 
               <div class="contact-form">
                 <label class="contact-form__label" for="tel">Телефон</label>
-                <input class="contact-form__input" type="tel" name="tel" id="tel">
+                <input class="contact-form__input contact-form__input--height" type="tel" name="tel" id="tel">
                 <svg class="contact-form__icon">
                   <use href="./images/icons.svg#phone-black"></use>
                 </svg>
               </div> 
               <div class="contact-form">
                 <label class="contact-form__label" for="email">Почта</label>
-                <input class="contact-form__input" type="email" name="email" id="email">
+                <input class="contact-form__input contact-form__input--height" type="email" name="email" id="email">
                 <svg class="contact-form__icon">
                   <use href="./images/icons.svg#email-black"></use>
                 </svg>
@@ -490,7 +490,7 @@
                 </label>
               </div>
             
-              <button class="button send" type="submit">Отправить</button>
+              <button class="button button__send" type="submit">Отправить</button>
               </div>
             </form>
           </div>
